--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               name="subject"
               required
               autocomplete="off"
-              placeholder="Collaboration Request"
+              placeholder="Seu assunto..."
             />
           </div>
           <div class="form-group">
@@ -52,7 +52,7 @@
               required
               spellcheck="false"
               autocomplete="off"
-              placeholder="Your Text..."
+              placeholder="Seu texto..."
             ></textarea>
           </div>
           <div class="form-group result-container">
